# OpenCL-ICD-Loader

./: CMakeLists.txt
loader/: CMakeLists.txt
loader/linux/: CMakeLists.txt
loader/windows/: CMakeLists.txt  icd_windows.c
